--- a/profile.html
+++ b/profile.html
@@ -51,10 +51,10 @@
                                 <p>XP</p>
                                 <div id="xp" class="user-text"></div>
                             </div>
-                            <!-- <div id="user-level" class="user-container">
+                            <div id="user-level" class="user-container">
                                 <p>Level</p>
                                 <div id="level" class="user-text"></div>
-                            </div> -->
+                            </div>
 
                         </div>
                     </div>
